# index.js
@@ -33,6 +33,9 @@ app.use("/api/roles", require('./routes/roles.routes'))
 app.use("/api/auth", require('./routes/auth.routes'))
 app.use("/api/archivos", require('./routes/archivos.routes'))
 app.use("/api/bitacora", require('./routes/bitacora.routes'))
+app.use('/api/carrito', require('./routes/carrito.routes'))
+app.use('/api/carritoproductos', require('./routes/carritoproducto.routes'))
+
 
 app.get("/*splat", (req, res) => {
     res.status(404).send("Recurso no encontrado")
